--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "awesome-typescript-loader": "^5.2.1",
+    "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
+    "mongoose": "^5.6.0",
     "next": "^8.1.0",
     "next-cookies": "^1.1.2",
     "next-images": "^1.1.2",
