--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "next build && tsc --project tsconfig.server.json"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.0",
     "@types/next": "^8.0.5",
@@ -24,6 +25,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "awesome-typescript-loader": "^5.2.1",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.0.0",
