--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-dom": "^16.8.6",
     "source-map-loader": "^0.2.4",
     "styled-components": "^4.3.1",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0"
