--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/passport-google-oauth20": "^2.0.1",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
+    "@types/react-transition-group": "^2.9.2",
     "@types/styled-components": "^4.1.16",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
@@ -43,6 +44,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-transition-group": "^4.1.1",
     "source-map-loader": "^0.2.4",
     "styled-components": "^4.3.1",
     "typescript": "^3.5.2",
