--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "James Au",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./bin/server/server.js",
+    "start": "NODE_ENV=production node ./bin/server/server.js",
+    "dev": "nodemon ./bin/server/server.js",
     "compile": "tsc --project tsconfig.server.json -w",
     "build": "next build && tsc --project tsconfig.server.json",
     "start-prod": "NODE_ENV=production nodemon ./bin/server/server.js"
