--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
