--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.0",
     "@types/lodash": "^4.14.135",
+    "@types/mongoose": "^5.5.7",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.8",
     "@types/passport": "^1.0.0",
