Added Jest and Enzyme for unit tests, along with loginform test

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
+    "@zeit/next-typescript/babel",
     "next/babel",
-    "@zeit/next-typescript/babel"
   ],
   "plugins": [
     [
