--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/passport": "^1.0.0",
     "@types/passport-google-oauth2": "^0.1.2",
     "@types/passport-google-oauth20": "^2.0.1",
-    "@types/react": "^16.8.20",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "@types/react-inlinesvg": "^0.8.1",
     "@types/react-transition-group": "^2.9.2",
     "@types/styled-components": "^4.1.16",
@@ -64,13 +64,18 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.17",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^24.8.0",
+    "prettier": "^1.18.2",
     "ts-jest": "^24.0.2"
   }
 }
