Added some global style variables, style changes to toggleablemenu

--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#fff",
-    "description": "A web application for students to study",
+    "description": "A web application for students to study"
 }
