--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.7.4",
     "cookie-session": "^1.3.3",
     "dotenv": "^8.0.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
