--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start-prod": "NODE_ENV=production nodemon ./bin/server/server.js"
   },
   "engines": {
-    "node": "10.16.1"
+    "node": "10.x"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
